# Aegis-ANK

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Instructions.md  PANIKS_LIST.txt  RELEASE_NOTES.md  SIREN_ARCHITECTURE.md  TICKETS.md  check.py  cli_err.txt  deploy_debian.sh
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: bundle_code.yml  pr_check.yml  release.yml
Tickets/: ANK-100.md  ANK-101.md  ANK-102.md  ANK-103.md  ANK-904.md
crates/aegis-sdk/: CHANGELOG.md  Cargo.toml
crates/aegis-sdk/src/: lib.rs
crates/ank-cli/: CHANGELOG.md  Cargo.toml
crates/ank-cli/src/: main.rs
crates/ank-core/: CHANGELOG.md  Cargo.toml
crates/ank-core/src/: lib.rs  pcb.rs
crates/ank-core/src/chal/: mod.rs
crates/ank-core/src/chal/drivers/: cloud.rs  cloud_voice.rs  mod.rs  native.rs
crates/ank-core/src/chronos/: mod.rs
crates/ank-core/src/dag/: mod.rs
crates/ank-core/src/enclave/: master.rs  mod.rs
crates/ank-core/src/plugins/: mod.rs  signer.rs  watcher.rs
crates/ank-core/src/scheduler/: compiler.rs  graph.rs  mod.rs  persistence.rs
crates/ank-core/src/scribe/: mod.rs
crates/ank-core/src/swarm/: client.rs  mod.rs
crates/ank-core/src/syscalls/: mod.rs
crates/ank-core/src/vcm/: mod.rs  swap.rs
crates/ank-core/tests/: test_scheduler.rs
crates/ank-mcp/: Cargo.toml
crates/ank-mcp/src/: client.rs  lib.rs  registry.rs  sse.rs  stdio.rs  transport.rs
crates/ank-proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/ank-proto/src/: lib.rs
crates/ank-server/: CHANGELOG.md  Cargo.toml
crates/ank-server/src/: lib.rs  main.rs  server.rs  siren.rs  tts.rs
crates/ank-server/src/auth/: citadel.rs  mod.rs
crates/ank-server/tests/: test_bridge.rs
docs/: COGNITIVE_ISA.md
plugins_src/: Cargo.toml
proto/: kernel.proto  siren.proto
