[workspace]
members = [
    "crates/ank-proto",
    "crates/ank-core",
    "crates/ank-server"
]
resolver = "2"

[workspace.dependencies]
# Dependencias compartidas para mantener las versiones sincronizadas
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # Manejo de errores profesional
tokio-stream = "0.1"
futures-util = "0.3" # Para stream helpers
