[package]
name = "ank-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
ank-proto = { path = "../ank-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
