[package]
name = "ank-core"
version = "0.5.1"
edition = "2021"

[dependencies]
# ANK Internal
ank-proto = { path = "../ank-proto" }
ank-mcp = { path = "../ank-mcp" }

# Workspace Shared Logic
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
prost-types.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
futures.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-buffer.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
regex.workspace = true
mdns-sd.workspace = true
reqwest.workspace = true
ed25519-dalek.workspace = true

# AI Infrastructure
llama-cpp-2 = { workspace = true, optional = true }

# lancedb.workspace = true

git2.workspace = true
encoding_rs = "0.8.35"
rusqlite = { version = "0.33.0", features = ["bundled-sqlcipher"] }
argon2 = "0.5.3"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"

[features]
default = []
local_llm = ["dep:llama-cpp-2"]
full_local = ["local_llm"]

[dev-dependencies]
tempfile = "3.26.0"

