[package]
name = "ank-mcp"
version = "1.4.0"
edition = "2021"
authors = ["Antigravity <sre@aegis-os.tech>"]
description = "Model Context Protocol (MCP) Client for Aegis Neural Kernel"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"

[dev-dependencies]
warp = "0.3"
