[package]
name = "ank-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# ANK Internal
ank-core = { path = "../ank-core" }
ank-proto = { path = "../ank-proto" }

# Workspace Shared Logic
tokio.workspace = true
tonic.workspace = true
anyhow.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
