[package]
name = "ank-server"
version = "0.2.0"
edition = "2021"

[dependencies]
# ANK Internal
ank-core = { path = "../ank-core" }
ank-proto = { path = "../ank-proto" }

# Workspace Shared Logic
tokio.workspace = true
tonic.workspace = true
anyhow.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
webrtc-vad = { version = "0.4.0", optional = true }
whisper-rs = { version = "0.13.0", optional = true }

serde_json.workspace = true
prost-types.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true

[features]
default = []
local_voice = ["dep:webrtc-vad", "dep:whisper-rs"]
full_local = ["local_voice", "ank-core/full_local"]
